--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,6 +110,6 @@ extra_css:
 
 copyright:  CC BY-SA / G.Lassus
 
-repo_url: https://github.com/glassus/premiere_nsi
+repo_url: https://github.com/glassus/terminale_nsi
 
-repo_name: glassus/premiere_nsi
+repo_name: glassus/terminale_nsi
