--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ theme:
   icon:
     logo: material/code-greater-than
     repo : fontawesome/brands/github
-  favicon: xtra/fav1NSI.png
+  favicon: xtra/favTNSI.png
 
   features:
     - navigation.instant
