--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,7 +56,7 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.details
   - pymdownx.highlight:
-      linenums: true
+      linenums: None
   - pymdownx.tasklist:
       custom_checkbox: false
   - pymdownx.inlinehilite
