--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,7 +81,7 @@ plugins:
   - macros
   - awesome-pages:
       collapse_single_pages: true
-  - page-to-pdf
+  #- page-to-pdf
  
  
  # - mkdocs-jupyter
