--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,9 +98,9 @@ extra:
       link: https://github.com/glassus/terminale_nsi
       name: Dépôt git
 
-#    - icon: fontawesome/solid/university
-#      link: https://lyceemauriac.fr
-#      name: Lycée François Mauriac - Bordeaux
+    - icon: fontawesome/solid/school
+      link: https://lyceemauriac.fr
+      name: Lycée François Mauriac - Bordeaux
 
 extra_javascript:
   - xtra/javascripts/interpreter.js
