--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,7 +81,8 @@ markdown_extensions:
 
 plugins:
   - search
-  - git-revision-date
+  - git-revision-date-localized:
+      enable_creation_date: false
   - awesome-pages:
       collapse_single_pages: false
   - macros
