--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,7 @@ plugins:
   - search
   - git-revision-date-localized:
       enable_creation_date: false
+      locale: fr
   - awesome-pages:
       collapse_single_pages: false
   - macros
