--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -111,6 +111,7 @@ extra:
       name: Lycée François Mauriac - Bordeaux
 
 extra_javascript:
+  - scripts/mathjax.js
   - xtra/javascripts/interpreter.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
