--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: "Terminale NSI - Lycée François Mauriac - Bordeaux"
-site_url: "https://glassus.github.io/terminale_nsi/"
+site_url: https://glassus.github.io/terminale_nsi/
 #nav:
 #  - 'accueil' : 'index.md'
 
