--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,5 @@ jobs:
       - run: pip install mkdocs-macros-plugin
       - run: pip install mkdocs-awesome-pages-plugin
       - run: pip install mkdocs-git-revision-date-localized-plugin
+      - run: pip install git+https://github.com/Epithumia/mkdocs-sqlite-console.git
       - run: mkdocs gh-deploy --force
